--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 }
     .imgs{
         width: 225px;
+        height: 500px;
         border: 5px solid black;
         margin: 10px 0px 10px 15px;
         vertical-align: top;
@@ -30,4 +31,5 @@
         border: 3px solid black;
         font-size: 20px;
         border-radius: 10px;
+        
     }
